--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,14 @@
         <version>2.6.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>hu.wup</groupId>
     <artifactId>restapi-test-project</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
+
     <name>restapi-test-project</name>
     <description>restapi-test-project</description>
+
     <properties>
         <java.version>11</java.version>
     </properties>
