--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8090
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/newdb
+spring.datasource.url=jdbc:mysql://localhost:3307/newdb
+spring.datasource.platform=mysql 
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
